# opifex.space

./: CMakeLists.txt
Android/Make/: Android.mk
Assets/Models/: fighter.opm  skySphere.opm
Assets/Shaders/OPENGL_2_0/: Projectile.frag  Projectile.vert
Assets/Shaders/OPENGL_2_0/Common/: PositionTextureNormal.vert  TexturedDirectionalLight.frag
CMake/: macros.cmake
Docs/: Environment-3.psd  Environment.psd  Toy_ball-1.psd  Toy_bear-1.psd  Toy_bear.psd  Toy_car-1.psd  Toy_gijoe (1).psd  Toy_swordsman-2.psd  Toy_swordsman.psd  Toy_trex-1.psd  Toy_trex-2.psd  Toy_trex-3.psd  Toy_trex.psd  Untitled_Artwork.psd  trex.psd
Docs/Environment/: skySphere.blend  skySphere.opm
Docs/Fighter/: fighter.opm  fighter0.blend  fighter0.opm
include/controllers/: ai.h  controller.h  player.h
include/entities/: entitiy.h  entity.h  projectile.h  ship.h  sky.h
include/states/: game.h
src/: Main.cpp
src/controllers/: ai.cpp  player.cpp
src/entities/: projectile.cpp  ship.cpp  sky.cpp
src/states/: game.cpp
